add state code to the map

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://cdn.glitch.com/bd24c68b-84ae-483b-8d24-38ebded99ed5%2FschoolLogo.png?v=1615002209388"/>
+    <link rel="icon" href="https://cdn.glitch.com/bd24c68b-84ae-483b-8d24-38ebded99ed5%2FweatherIcon.png?v=1616864712346"/>
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -41,7 +41,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/leaflet.extra-markers.min.css">
   
-    <title>Outdoor Activities in NYC</title>
+    <title>Weather Map</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
